made edits to data description

--- a/IDL Analysis.Rmd
+++ b/IDL Analysis.Rmd
@@ -15,6 +15,45 @@ options(digits = 3)
 #preventing scientific notation
 options(scipen = 10)
 ```
+# Table of Contents 
+
+
+## Executive Summary 
+
+## Section 1: Data description 
+- What is the basic data model and how are tables related?
+- What variables/fields are included in the data set and what do they measure?
+High overview of what is available and how things can be merged. What variables/fields are included in the data set and what do they measure?
+- How are the data organized?
+- What is the size of the data? 
+- How many observations does it contain?
+- How much storage space does it require? 
+- What is the file type of the raw data (.csv, .txt, etc.)? 
+- What is known about how the data were generated? 
+- Who owns the data and what kind of permissions or constraints are placed on its use? 
+- What is not known about the data, and how does this gap in knowledge affect the ability to work with it? 
+- What, if any, issues did you encounter relating to your access and/or ability to work with the data effectively? 
+
+## Section 2: Data journey
+- What was done to clean or transform the data? 
+- What software, languages, and tools were used to work with the data? 
+- What questions were you trying to answer with the data? 
+- What analyses were conducted on the data and what were the results? 
+
+## Section 3: Data assessment
+- What are the sensitivities and ethical considerations of working with this data? 
+- What are the strengths and limitations of working with this dataset(s)? 
+- What are the strengths and limitations of the methods that were applied? 
+- What elements in the data operationalize the key concepts and/or questions in the project?  
+
+## Section 4: Future work
+- What further questions can be asked with the data? 
+- What other data sets could complement or replace these data?
+- What methods could be applied to answer the aforementioned questions and work with the aforementioned data sets?  
+- What software, languages, and tools would be needed to answer the aforementioned questions and work with aforementioned data sets?
+- What resources and/or areas of expertise would be valuable for others interested in working with the data? 
+
+## Section 5: TBD [What else would be helpful for IDL? What have we missed?]
 
 ```{r, message=FALSE}
 #packages used in this analysis
@@ -35,8 +74,8 @@ if(!require(tidyr)){
     library(tidyr)
 }
 ```
-
 ---
+# Executive Summary 
 The Department of Housing and Urban Development (HUD) considers people spending more than 30% of their income on housing as housing burdened. Housing costs include rent, mortgage payement, property taxes, utilities, and housing insurance (Lin, 2018). There has recently been a spotlight on how energy prices, i.e. utilities, contribute to housing burden (Buylova, 2020). Energy bills of more than 6-10% of income is considered unaffordable (Hernandez & Bird, 2010; Heindl, 2015; Kontokosta et al., 2019). Previous research demonstrates energy cost burden disproportionately affect lower income households, largely because they are most at risk for living in substandard and inefficient housing (Hernandez & Phillips, 2015). Energy upgrades can  help alleviate enerrgy cost burden and potentially housing burden by saving a low-income multifamily household up to $1,500 per year per household (Kontokosta et al., 2019).
 
 Energy cost burden is a function of both income and energy consumption. Drehobl and Ross (2016) found that an average low-income household energy burden was 7.2%, which is higher than an average higher income household energy burden of 2.3%. Findings from an evaluation of a federal energy assistance program determiined that low-income households represent 92% of all households with energy burden of 10% (APPRISE, 2005). Federal Low-Income Home Energy Assistance Program (LIHEAP) designs its funding distribution mechanism based on energy burden levels. Income is used as the main qualifier for this program.
@@ -50,11 +89,16 @@ Suggested Readings:
 [Kontokosta, C. E., Reina, V. J., & Bonczak, B. (2020). Energy cost burdens for low-income and minority households: Evidence from energy benchmarking and audit data in five US cities. Journal of the American Planning Association, 86(1), 89-105.](https://www.tandfonline.com/doi/full/10.1080/01944363.2019.1647446)
 ---
 
-This data is from the Residential Building Stock Assessment [(RBSA)](https://neea.org/resources/rbsa-ii-combined-database) conducted in 2016-17. It includes a representative sample of single-family, Multi-family and manufactured homes gathered across the Northwest region. Supporting documentation of the RBSA data can be found [here](https://neea.org/data/residential-building-stock-assessment). 
+# Data Description 
 
-The RBSA database houses all data gathered during the study, including that for manufactured homes, single-family homes, multi-family residences, and multi-family buildings. Within the database, data are attributed to a Site or a Building. Building data include information collected for nonresidential portions of a multifamily building. Site data include information collected for the entirety of a single-family or manufactured home, and for residences visited at a multifamily building. The database denotes data associated with a Site by a CK_SiteID or PK_SiteID beginning with “SITE”; the database denotes data associated with a Building by a CK_SiteID or PK_SiteID beginning with “BLDG.”
+This data is from the Residential Building Stock Assessment [(RBSA)](https://neea.org/resources/rbsa-ii-combined-database) conducted in 2016-17. It has 47 comma separated variable (csv) tabular datasets that includes a representative sample of 1,130 single-family, 230 multi-family and 550 manufactured homes gathered across the Northwest region. For the single-family component, participants are recruited based on a random selection of single-family residential USPS addresses. For the multi-family component, the study recruited multi-family buildings to participate in the study and then identify tenants in those buildings willing to participate. Two auditors performed each site visit. Audits lasted approximately two hours and covered all of the major components of the homes that can be linked to the household’s overall energy use, including: building envelope, HVAC systems, lighting, appliances, electronics, and water technologies. In addition, this audit data was combined with self-reported home characteristics and demographics data that were collected in the phone survey during the recruitment of on-site sample. Supporting documentation of the RBSA data can be found [here](https://neea.org/data/residential-building-stock-assessment).
 
-Each row in a table has a unique primary key (PK), making it possible to reference that specific object, and may include other relational keys (CKs) that make it possible to relate to other tables in the database. Most tables can be joined using the CK_SiteID and the CK_RoomID
+The RBSA database is comprised of a 49 files: 47 csv files, one .txt ReadMe, and an excel spreadsheet with unique database values. One of the csv tables is a data dictionary that gives a description of the column names in each csv table. The size of the csv files ranges from 2 KB to 16.6 MB. The smallest table contains 11 columns and 14 rows/observations, while the largest table contains 249 columns and 15561 rows/observations. The ReadMe details updates and changes to the RBSA II Database; changes and updates are numbered and organized by date. Each row in a table has a unique primary key (PK), making it possible to reference that specific object, and may include other relational keys (CKs) that make it possible to relate to other tables in the database. Most tables can be joined using the CK_SiteID and the CK_RoomID.
+
+
+The RBSA database houses data for manufactured homes, single-family homes, multi-family residences, and multi-family buildings. Within the database, data are attributed to a Site or a Building. Building data include information collected for nonresidential portions of a multifamily building. Site data include information collected for the entirety of a single-family or manufactured home, and for residences visited at a multifamily building. The database denotes data associated with a Site by a CK_SiteID or PK_SiteID beginning with “SITE”; the database denotes data associated with a Building by a CK_SiteID or PK_SiteID beginning with “BLDG.”
+
+
 ```{r, message=FALSE, warning=FALSE}
 #Import the RBSA data frames of interest
 
@@ -65,6 +109,19 @@ site_df <- read_csv("RBSA-II-Combined-Database/SiteDetail.csv")
 energyuse_df <- read_csv("RBSA-II-Combined-Database/SiteInterview_HomeEnergyUse.csv")
 ```
 
+Next Steps: 
+- Outline Data Description following Data Brief Template 
+
+
+-Explore Data
+  - Make note of tables provided and what can be merged 
+  - Make note of size of the data 
+  -Merge Data 
+  -Select Variables of Interest 
+
+```{r}
+
+```
 
 
 
