--- a/IDL Analysis.Rmd
+++ b/IDL Analysis.Rmd
@@ -95,9 +95,7 @@ This data is from the Residential Building Stock Assessment [(RBSA)](https://nee
 
 The RBSA database is comprised of a 49 files: 47 csv files, one .txt ReadMe, and an excel spreadsheet with unique database values. One of the csv tables is a data dictionary that gives a description of the column names in each csv table. The size of the csv files ranges from 2 KB to 16.6 MB. The smallest table contains 11 columns and 14 rows/observations, while the largest table contains 249 columns and 15561 rows/observations. The ReadMe details updates and changes to the RBSA II Database; changes and updates are numbered and organized by date. Each row in a table has a unique primary key (PK), making it possible to reference that specific object, and may include other relational keys (CKs) that make it possible to relate to other tables in the database. Most tables can be joined using the CK_SiteID and the CK_RoomID.
 
-
 The RBSA database houses data for manufactured homes, single-family homes, multi-family residences, and multi-family buildings. Within the database, data are attributed to a Site or a Building. Building data include information collected for nonresidential portions of a multifamily building. Site data include information collected for the entirety of a single-family or manufactured home, and for residences visited at a multifamily building. The database denotes data associated with a Site by a CK_SiteID or PK_SiteID beginning with “SITE”; the database denotes data associated with a Building by a CK_SiteID or PK_SiteID beginning with “BLDG.”
-
 
 ```{r, message=FALSE, warning=FALSE}
 #Import the RBSA data frames of interest
@@ -110,12 +108,12 @@ energyuse_df <- read_csv("RBSA-II-Combined-Database/SiteInterview_HomeEnergyUse.
 ```
 
 Next Steps: 
-- Outline Data Description following Data Brief Template 
+- Outline Data Description following Data Brief Template = DONE
 
 
 -Explore Data
   - Make note of tables provided and what can be merged 
-  - Make note of size of the data 
+  - Make note of size of the data = DONE 
   -Merge Data 
   -Select Variables of Interest 
 
