--- a/IDL Analysis.Rmd
+++ b/IDL Analysis.Rmd
@@ -50,14 +50,16 @@ High overview of what is available and how things can be merged. What variables/
 - What are the strengths and limitations of the methods that were applied?
 - What elements in the data operationalize the key concepts and/or questions in the project?  
 
-## Section 4: Future work
+## Section 4: Modeling
+- What analyses can be done with the data 
+
+## Section 5: Future work
 - What further questions can be asked with the data?
 - What other data sets could complement or replace these data?
 - What methods could be applied to answer the aforementioned questions and work with the aforementioned data sets?  
 - What software, languages, and tools would be needed to answer the aforementioned questions and work with aforementioned data sets?
 - What resources and/or areas of expertise would be valuable for others interested in working with the data?
 
-## Section 5: TBD [What else would be helpful for IDL? What have we missed?]
 
 ```{r, message=FALSE}
 #packages used in this analysis
@@ -84,11 +86,11 @@ if(!require(janitor)){
 ```
 ---
 # Executive Summary
+This documentation outlines the preprocessing of RBSA data to reproduce the analytical data frame and model as described in the Buylova (2020) Spotlight on energy efficiency in Oregon article. Buyolva (2020) used two datasets: a household energy audit survey - the residential building stock assessment (RBSA) completed by the Northwest Energy Efficiency Association (NEEA) in 2017 and the American Community Survey (ACS) 2012-2017 5-year estimates data to investigate the dynamics between energy use and socio-demographic characteristics in spatial modeling of residential energy consumption. This documentation is focused on preprocessing the RBSA data.
+
 The Department of Housing and Urban Development (HUD) considers people spending more than 30% of their income on housing as housing burdened. Housing costs include rent, mortgage payement, property taxes, utilities, and housing insurance (Lin, 2018). There has recently been a spotlight on how energy prices, i.e. utilities, contribute to housing burden (Buylova, 2020). Energy bills of more than 6-10% of income is considered unaffordable (Hernandez & Bird, 2010; Heindl, 2015; Kontokosta et al., 2019). Previous research demonstrates energy cost burden disproportionately affect lower income households, largely because they are most at risk for living in substandard and inefficient housing (Hernandez & Phillips, 2015). Energy upgrades can  help alleviate enerrgy cost burden and potentially housing burden by saving a low-income multifamily household up to $1,500 per year per household (Kontokosta et al., 2019).
 
 Energy cost burden is a function of both income and energy consumption. Drehobl and Ross (2016) found that an average low-income household energy burden was 7.2%, which is higher than an average higher income household energy burden of 2.3%. Findings from an evaluation of a federal energy assistance program determiined that low-income households represent 92% of all households with energy burden of 10% (APPRISE, 2005). Federal Low-Income Home Energy Assistance Program (LIHEAP) designs its funding distribution mechanism based on energy burden levels. Income is used as the main qualifier for this program.
-
-Buyolva (2020) used two datasets: a household energy audit survey - the residential building stock assessment (RBSA) completed by the Northwest Energy Efficiency Association (NEEA) in 2017 and the American Community Survey (ACS) 2012-2017 5-year estimates data to investigate the dynamics between energy use and socio-demographic characteristics in spatial modeling of residential energy consumption.
 
 Suggested Readings:
 
@@ -97,7 +99,12 @@ Suggested Readings:
 [Kontokosta, C. E., Reina, V. J., & Bonczak, B. (2020). Energy cost burdens for low-income and minority households: Evidence from energy benchmarking and audit data in five US cities. Journal of the American Planning Association, 86(1), 89-105.](https://www.tandfonline.com/doi/full/10.1080/01944363.2019.1647446)
 ---
 
-# Data Description
+## Section 1: Data description
+
+### Key Steps
+1) Explored and discovered existing data documentation 
+2) Discovered 
+3) Identified data frames of interest 
 
 This data is from the Residential Building Stock Assessment [(RBSA)](https://neea.org/resources/rbsa-ii-combined-database) conducted in 2016-17. It has 47 comma separated variable (csv) tabular datasets that includes a representative sample of 1,130 single-family, 230 multi-family and 550 manufactured homes gathered across the Northwest region. For the single-family component, participants are recruited based on a random selection of single-family residential USPS addresses. For the multi-family component, the study recruited multi-family buildings to participate in the study and then identify tenants in those buildings willing to participate. Two auditors performed each site visit. Audits lasted approximately two hours and covered all of the major components of the homes that can be linked to the household’s overall energy use, including: building envelope, HVAC systems, lighting, appliances, electronics, and water technologies. In addition, this audit data was combined with self-reported home characteristics and demographics data that were collected in the phone survey during the recruitment of on-site sample. Supporting documentation of the RBSA data can be found [here](https://neea.org/data/residential-building-stock-assessment).
 
@@ -119,48 +126,23 @@ site_df <- read_csv("RBSA-II-Combined-Database/SiteDetail.csv")  #redundant with
 energyuse_df <- read_csv("RBSA-II-Combined-Database/SiteInterview_HomeEnergyUse.csv") #has data on energy use and energy star appliances
 ```
 
-Next Steps:
-- Outline Data Description following Data Brief Template = DONE
-- Find parcel data for other counties in the Puget Sound Region
+---
 
--Explore Data
-  - Make note of tables provided and what can be merged = DONE
-  - Make note of size of the data = DONE
-  -Merge Data = DONE
-Select Variables of Interest
- -Variables from Buylova Paper:
-  Housing variables:
-  1) type of housing
-  2) year of construction
-  3) primary heating
-  4) number of bedrooms
-  Household characteristics:
-  1) income
-  2) ownership
-  3) elderly - older than 65
-  4) children
-  5) household size
-
-
-## Data journey
+## Section 2: Data journey
 
 ###Key Steps
-1) Identify data frames of interest and conduct data quality assessement
-2) Merge datasets of interests
-3) Subset data
-4) Explore data and select variables of interest
+1) Identified and merged data frames of interest
+3) Subset the data for region of interest
+4) Explored data and selected variables of interest
   a) explanatory variables based on Buylova paper
-5) Recode and reclassify data
-6) Transform some variables
-7) Create EUI variable (response variable)
+5) Recoded and reclassified data
+6) Transformed variables of interest
+7) Created EUI variable (response variable)
 
 
-The data cleaning and wrangling process followed basic data quality checks, which
-included assessing the data for 1) accuracy, 2) completeness, 3) consistency, 4) timeliness,
-5) validity, and 6) uniqueness (refer to Appendix for detailed information regarding this assessment).
-All of the data cleaning and wrangling took place in RStudio, using base R and tidyverse programming. The first step in the cleaning process involved identifying useful datasets. The "One Line Summary" and "Site Interview Demographics" data frames were used for this analysis. The "One Line Summary" data frame exhaustive data frame that included information about energy consumption, geographic location, and building information. The "Site Interview Demographics" data frame included demographic information, such as resident's income, age, and ownership status (renter or buyer).
+The data cleaning and wrangling process followed basic data quality checks, which included assessing the data for 1) accuracy, 2) completeness, 3) consistency, 4) timeliness, 5) validity, and 6) uniqueness (refer to Appendix for detailed information regarding this assessment). All of the data cleaning and wrangling took place in RStudio, using base R and tidyverse syntax The first step in the cleaning process involved identifying useful datasets. The "One Line Summary" and "Site Interview Demographics" data frames were used for this analysis. The "One Line Summary" data frame exhaustive data frame that included information about energy consumption, geographic location, and building information. The "Site Interview Demographics" data frame included demographic information, such as resident's income, age, and ownership status (renter or buyer).
 
-The next step in the data cleaning and wrangling process was identifying a primary key to merge the "One Line Summary" data frame and the "Site Interview Demographics" data frame. The data frames were merged by the "DB_SiteID" and "CK_SiteID." After the merger, the data sets were subsetted for for the "Puget Sound" region.
+The next step in the data cleaning and wrangling process was identifying a primary key to merge the "One Line Summary" data frame and the "Site Interview Demographics" data frame. The data frames were merged by the "DB_SiteID" and "CK_SiteID." After the merger, the data sets were subsetted for for the "Puget Sound" region. Next, housing variables and household characteristic variables, as outlined by the Buylova (2020) paper, were selected for the analytical data frame. Check the Appendix to learn more about the housing and household characteristic variables. Variables with the kBtu units were also selected to create the EUI variable. Finally, the varibles were cleaned and wrangled. 
 
 ```{r}
 #Merge ols_df to demog
@@ -179,21 +161,7 @@ sum(is.na((pug_sound_ols)))
 
 summary(pug_sound_ols)
 ```
-Select Variables of Interest
- -Variables from Buylova Paper:
- 
-  Housing variables:
-  1) type of housing
-  2) year of construction
-  3) primary heating
-  4) number of bedrooms
- 
-  Household characteristics:
-  1) income
-  2) ownership
-  3) elderly - older than 65
-  4) children
-  5) household size
+
 ```{r}
 #Select variables of interest
 pug_short <- pug_sound_ols %>%
@@ -277,12 +245,26 @@ summary(pug_short_eui$`Conditioned Area`)
 pug_eui <- clean_names(pug_short_eui)
 ```
 
+---
+## Section 3: Data assessment
+- What are the sensitivities and ethical considerations of working with this data?
+- What are the strengths and limitations of working with this dataset(s)?
+- What are the strengths and limitations of the methods that were applied?
+- What elements in the data operationalize the key concepts and/or questions in the project?  
+
+
 ```{r}
 #Visualize eui
 pug_eui %>%
   ggplot(aes(eui,conditioned_area)) + geom_point() + stat_smooth(method = lm) + facet_wrap(~primary_heating_system)
  
 ```
+
+---
+
+## Section 4: Modeling
+- What analyses can be done with the data 
+- What models were built 
 
 ```{r}
 #model  
@@ -291,9 +273,19 @@ lm(eui ~ conditioned_area, data = pug_eui)
 lm(eui ~ home_type_final + primary_heating_system + qty_bedrooms + elderly + children + household_size + ownership, data = pug_eui) %>%
   summary()
 ```
+
+---
+
+## Section 5: Future work
+- What further questions can be asked with the data?
+- What other data sets could complement or replace these data?
+- What methods could be applied to answer the aforementioned questions and work with the aforementioned data sets?  
+- What software, languages, and tools would be needed to answer the aforementioned questions and work with aforementioned data sets?
+- What resources and/or areas of expertise would be valuable for others interested in working with the data?
+
 # Appendices
 
-## Apendix A: Data Quality Assessment Dimensions
+## Appendix A: Data Quality Assessment Dimensions
 
 1) Accuracy
   i) How well does a piece of information reflect reality?
@@ -312,6 +304,20 @@ lm(eui ~ home_type_final + primary_heating_system + qty_bedrooms + elderly + chi
  
 6) Uniqueness
   i) Is this the only instance in which this information appears in the database?
+  
+## Appendix B: Buylova (2020) variables of interest
+  I. Housing variables:
+  1) type of housing
+  2) year of construction
+  3) primary heating
+  4) number of bedrooms
+ 
+  II. Household characteristics:
+  1) income
+  2) ownership
+  3) elderly - older than 65
+  4) children
+  5) household size
 ```{r}
 BuildingOneLine <- read_csv("RBSA-II-Combined-Database/BuildingOneLine.csv")
 View(BuildingOneLine)
